fixing align for blog

--- a/src/main/webapp/css/sitemap.css
+++ b/src/main/webapp/css/sitemap.css
@@ -73,3 +73,7 @@ table {
 #td-odd {
     background-color: #F5F5F5;
 }
+
+#pblog-left{
+    align: left;
+}
